--- a/html/reminder.html
+++ b/html/reminder.html
@@ -23,9 +23,13 @@
     <main>
         <h2>Reminder</h2>
         <div class="reminder-container">
-            <input type="text" id="reminder-input" placeholder="Enter reminder">
-            <input type="datetime-local" id="reminder-time">
-            <button id="add-reminder">Add Reminder</button>
+            <div class="reminder-inputs">
+                <input type="text" id="reminder-input" placeholder="Enter reminder">
+                <input type="datetime-local" id="reminder-time">
+            </div>
+            <div class="reminder-buttons">
+                <button id="add-reminder">Add Reminder</button>
+            </div>
         </div>
         <ul id="reminder-list"></ul>
     </main>
