--- a/html/pomodoro.html
+++ b/html/pomodoro.html
@@ -36,7 +36,7 @@
             <!-- Pomodoro Settings Section -->
             <div class="pomodoro-settings">
                 <label for="pomodoro-duration">Set Timer (minutes):</label>
-                <input type="number" id="pomodoro-duration" placeholder="Enter minutes" min="1" max="60">
+                <input type="number" id="pomodoro-duration" placeholder="Enter minutes" >
                 
                 <label for="pomodoro-task">Task Topic (optional):</label>
                 <input type="text" id="pomodoro-task" placeholder="Enter task topic">
